fix margin for logo and nav and title edit

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -25,7 +25,7 @@
             </div>
             
         </div>
-            <h1 class="title_top">Sakura Ramen</h1> <span class="subtitle">THE BEST RAMEN IN TOWN</span>
+            <h1 class="title_top">SAKURA RAMEN</h1> <span class="subtitle">THE BEST RAMEN IN TOWN</span>
     </div>
 
     <div>
