menu test1 but don't work (html , css) add meta for "viewport"

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -47,8 +48,23 @@
     </div>
     <div class="our_menu">
         <h1 class="title_menu">OUR MENU</h1>
-
+        <div class="menu_1">
+            <div>
+              <div class="img_menu_1">
+                  <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen">
+              </div>
+              <div class="menu_1_list">
+                  <h2>Tonkotsu Ramen</h2>
+                  <ul>
+                      <li>CHICKEN <span>11.95€</span></li>
+                      <li>BEEF <span>12.95</span></li>
+                      <li>SHRIMP <span>12.95</span></li>
+                  </ul>
+              </div>
+            </div>
+        </div>
     </div>
+
 
 </body>
 
