--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -55,11 +55,21 @@
               </div>
               <div class="menu_1_list">
                   <h2>Tonkotsu Ramen</h2>
-                  <ul>
-                      <li>CHICKEN <span>11.95€</span></li>
-                      <li>BEEF <span>12.95</span></li>
-                      <li>SHRIMP <span>12.95</span></li>
-                  </ul>
+                  <table class="menu_1_list">
+                      <tr>
+                          <td>CHICKEN</td>
+                          <td>11.95€</td>
+                      </tr>
+
+                      <tr>
+                          <td>BEEF</td>
+                          <td>12.95</td>
+                      </tr>
+                      <tr>
+                          <td>SHRIMP</td>
+                          <td>12.95</td>
+                      </tr>
+                  </table>
               </div>
             </div>
         </div>
