make menu layout proper
Signed-off-by: AssiWelpe <164692991+AssiWelpe@users.noreply.github.com>

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -48,33 +48,70 @@
     </div>
     <div class="our_menu">
         <h1 class="title_menu">OUR MENU</h1>
-        <div class="menu_1">
-            <div>
-              <div class="img_menu_1">
-                  <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen">
-              </div>
-              <div class="menu_1_list">
-                  <h2>Tonkotsu Ramen</h2>
-                  <table class="menu_1_list">
-                      <tr>
-                          <td>CHICKEN</td>
-                          <td>11.95€</td>
-                      </tr>
+        <div class="menu-container">
+            <div class="menu">
+                <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen" width="352px" height="352px">
+                <div class="menu_item">
+                    <h2>Tonkotsu Ramen</h2>
+                    <div class="list">
+                        <div class="item_price">
+                            <div class="item">CHICKEN</div>
+                            <div class="price">11.95€</div>
+                        </div>
+                        <div class="item_price">
+                            <div class="item">BEEF</div>
+                            <div class="price">12.95€</div>
+                        </div>
+                        <div class="item_price">
+                            <div class="item">SHRIMP</div>
+                            <div class="price">12.95€</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-                      <tr>
-                          <td>BEEF</td>
-                          <td>12.95</td>
-                      </tr>
-                      <tr>
-                          <td>SHRIMP</td>
-                          <td>12.95</td>
-                      </tr>
-                  </table>
-              </div>
+            <div class="menu">
+                <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen" width="352px" height="352px">
+                <div class="menu_item">
+                    <h2>Tonkotsu Ramen</h2>
+                    <div class="list">
+                        <div class="item_price">
+                            <div class="item">CHICKEN</div>
+                            <div class="price">11.95€</div>
+                        </div>
+                        <div class="item_price">
+                            <div class="item">BEEF</div>
+                            <div class="price">12.95€</div>
+                        </div>
+                        <div class="item_price">
+                            <div class="item">SHRIMP</div>
+                            <div class="price">12.95€</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu">
+                <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen" width="352px" height="352px">
+                <div class="menu_item">
+                    <h2>Tonkotsu Ramen</h2>
+                    <div class="list">
+                        <div class="item_price">
+                            <div class="item">CHICKEN</div>
+                            <div class="price">11.95€</div>
+                        </div>
+                        <div class="item_price">
+                            <div class="item">BEEF</div>
+                            <div class="price">12.95€</div>
+                        </div>
+                        <div class="item_price">
+                            <div class="item">SHRIMP</div>
+                            <div class="price">12.95€</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
 
 </body>
 
