--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -69,11 +69,10 @@
                     </div>
                 </div>
             </div>
-
             <div class="menu">
-                <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen" width="352px" height="352px">
+                <img src="assets/img/3_section_our_menu/Png/R2.png" alt="Spicy Miso Ramen" width="352px" height="352px">
                 <div class="menu_item">
-                    <h2>Tonkotsu Ramen</h2>
+                    <h2>Spicy Miso Ramen</h2>
                     <div class="list">
                         <div class="item_price">
                             <div class="item">CHICKEN</div>
@@ -91,9 +90,9 @@
                 </div>
             </div>
             <div class="menu">
-                <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen" width="352px" height="352px">
+                <img src="assets/img/3_section_our_menu/Png/R3.png" alt="Shio Ramen" width="352px" height="352px">
                 <div class="menu_item">
-                    <h2>Tonkotsu Ramen</h2>
+                    <h2>Shio Ramen</h2>
                     <div class="list">
                         <div class="item_price">
                             <div class="item">CHICKEN</div>
@@ -112,7 +111,32 @@
             </div>
         </div>
     </div>
-
+    <div>
+        <h1 class="find_h1">FIND US AT</h1>
+        <div class="address">
+            <span><img src="assets/img/4_section_find_us_at/PNG/map_marker.png" alt="map_marker">Kapuzinerstraße 31, München, 80337</span>
+        </div>
+    </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470.79301742492817!2d11.560743758239765!3d48.12552203152572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf005672188d%3A0x3887f00928415e45!2sSakura%20Ramen!5e0!3m2!1sde!2sde!4v1729350333380!5m2!1sde!2sde"
+            width="100%"
+            height="600"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"
+    ></iframe>
 </body>
+
+<footer>
+    <div class="footer_container">
+        <div class="footer_logo">
+            <img src="assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png">
+        </div>
+        <div class="footer_icons">
+            <img src="assets/img/5_section_footer/PNG/tripadvisor_logo.png" alt="tripadvisor">
+            <img src="assets/img/5_section_footer/PNG/facebook_logo.png" alt="facebook">
+            <img src="assets/img/5_section_footer/PNG/instagrram_logo.png" alt="instagrram">
+        </div>
+    </div>
+</footer>
 
 </html>
