fix all wrong things to make it better

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-    <div class="hero_top hero">
+    <div class="hero-header hero">
         <div class="navbar">
             <img class="logo" src="assets/img/1_hero/SVG/sakura_logo.svg" alt="logo">
             <div class="nav">
@@ -26,14 +26,14 @@
             </div>
             
         </div>
-            <h1 class="title_top">SAKURA RAMEN</h1> <span class="subtitle">THE BEST RAMEN IN TOWN</span>
+            <h1 class="hero-title">SAKURA RAMEN</h1> <span class="subtitle">THE BEST RAMEN IN TOWN</span>
     </div>
 
     <div>
-        <h1 class="how_to_order">HOW TO ORDER</h1>
+        <h2 class="how_to_order">HOW TO ORDER</h2>
     </div>
-    <div class="style_text_img">
-        <div class="margin_left">
+    <div class="order-options-container">
+        <div class="order-option-left">
             <img class="img_style" src="assets/img/2_section_how_to_order/PNG/noodle.png" alt="noodle">
             <p class="text_style">Pick your <br> noddle</p>
         </div>
@@ -41,97 +41,100 @@
             <img class="img_style" src="assets/img/2_section_how_to_order/PNG/broth.png" alt="broth">
             <p class="text_style">Pick your <br> broth</p>
         </div>
-        <div class="margin_right">
+        <div class="order-option-right">
             <img class="img_style" src="assets/img/2_section_how_to_order/PNG/egg.png" alt="egg">
             <p class="text_style">Add your <br> toppings</p>
         </div>
     </div>
-    <div class="our_menu">
-        <h1 class="title_menu">OUR MENU</h1>
+    <div class="menu-section">
+        <h2 class="menu-title">OUR MENU</h2>
         <div class="menu-container">
             <div class="menu">
                 <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen" width="352px" height="352px">
                 <div class="menu_item">
-                    <h2>Tonkotsu Ramen</h2>
+                    <h3>Tonkotsu Ramen</h3>
                     <div class="list">
-                        <div class="item_price">
-                            <div class="item">CHICKEN</div>
-                            <div class="price">11.95€</div>
-                        </div>
-                        <div class="item_price">
-                            <div class="item">BEEF</div>
-                            <div class="price">12.95€</div>
-                        </div>
-                        <div class="item_price">
-                            <div class="item">SHRIMP</div>
-                            <div class="price">12.95€</div>
-                        </div>
+                        <table class="item_price">
+                            <tr>
+                                <td>CHICKEN</td>
+                                <td>11.95</td>
+                            </tr>
+                            <tr>
+                                <td>BEEF</td>
+                                <td>12.95</td>
+                            </tr>
+                            <tr>
+                                <td>SHRIMP</td>
+                                <td>13.95</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
             <div class="menu">
                 <img src="assets/img/3_section_our_menu/Png/R2.png" alt="Spicy Miso Ramen" width="352px" height="352px">
                 <div class="menu_item">
-                    <h2>Spicy Miso Ramen</h2>
+                    <h3>Spicy Miso Ramen</h3>
                     <div class="list">
-                        <div class="item_price">
-                            <div class="item">CHICKEN</div>
-                            <div class="price">11.95€</div>
-                        </div>
-                        <div class="item_price">
-                            <div class="item">BEEF</div>
-                            <div class="price">12.95€</div>
-                        </div>
-                        <div class="item_price">
-                            <div class="item">SHRIMP</div>
-                            <div class="price">12.95€</div>
-                        </div>
+                        <table class="item_price">
+                            <tr>
+                                <td>CHICKEN</td>
+                                <td>11.95</td>
+                            </tr>
+                            <tr>
+                                <td>BEEF</td>
+                                <td>12.95</td>
+                            </tr>
+                            <tr>
+                                <td>SHRIMP</td>
+                                <td>13.95</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
             <div class="menu">
                 <img src="assets/img/3_section_our_menu/Png/R3.png" alt="Shio Ramen" width="352px" height="352px">
                 <div class="menu_item">
-                    <h2>Shio Ramen</h2>
+                    <h3>Shio Ramen</h3>
                     <div class="list">
-                        <div class="item_price">
-                            <div class="item">CHICKEN</div>
-                            <div class="price">11.95€</div>
-                        </div>
-                        <div class="item_price">
-                            <div class="item">BEEF</div>
-                            <div class="price">12.95€</div>
-                        </div>
-                        <div class="item_price">
-                            <div class="item">SHRIMP</div>
-                            <div class="price">12.95€</div>
-                        </div>
+                        <table class="item_price">
+                            <tr>
+                                <td>CHICKEN</td>
+                                <td>11.95</td>
+                            </tr>
+                            <tr>
+                                <td>BEEF</td>
+                                <td>12.95</td>
+                            </tr>
+                            <tr>
+                                <td>SHRIMP</td>
+                                <td>13.95</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div>
-        <h1 class="find_h1">FIND US AT</h1>
+        <h2 class="find-us-title">FIND US AT</h2>
         <div class="address">
             <span><img src="assets/img/4_section_find_us_at/PNG/map_marker.png" alt="map_marker">Kapuzinerstraße 31, München, 80337</span>
         </div>
     </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470.79301742492817!2d11.560743758239765!3d48.12552203152572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf005672188d%3A0x3887f00928415e45!2sSakura%20Ramen!5e0!3m2!1sde!2sde!4v1729350333380!5m2!1sde!2sde"
-            width="100%"
-            height="600"
-            style="border:0;"
+    <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470.79301742492817!2d11.560743758239765!3d48.12552203152572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf005672188d%3A0x3887f00928415e45!2sSakura%20Ramen!5e0!3m2!1sde!2sde!4v1729350333380!5m2!1sde!2sde"
             allowfullscreen=""
             loading="lazy"
     ></iframe>
 </body>
 
 <footer>
-    <div class="footer_container">
-        <div class="footer_logo">
+    <div class="footer-wrapper">
+        <div class="footer-logo">
             <img src="assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png">
         </div>
-        <div class="footer_icons">
+        <div class="footer-icons">
             <img src="assets/img/5_section_footer/PNG/tripadvisor_logo.png" alt="tripadvisor">
             <img src="assets/img/5_section_footer/PNG/facebook_logo.png" alt="facebook">
             <img src="assets/img/5_section_footer/PNG/instagrram_logo.png" alt="instagrram">
