fix h and w for img in menu

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -50,7 +50,7 @@
         <h2 class="menu-title">OUR MENU</h2>
         <div class="menu-container">
             <div class="menu">
-                <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen" width="352px" height="352px">
+                <img src="assets/img/3_section_our_menu/Png/R1.png" alt="Tonkotsu Ramen">
                 <div class="menu_item">
                     <h3>Tonkotsu Ramen</h3>
                     <div class="list">
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="menu">
-                <img src="assets/img/3_section_our_menu/Png/R2.png" alt="Spicy Miso Ramen" width="352px" height="352px">
+                <img src="assets/img/3_section_our_menu/Png/R2.png" alt="Spicy Miso Ramen">
                 <div class="menu_item">
                     <h3>Spicy Miso Ramen</h3>
                     <div class="list">
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="menu">
-                <img src="assets/img/3_section_our_menu/Png/R3.png" alt="Shio Ramen" width="352px" height="352px">
+                <img src="assets/img/3_section_our_menu/Png/R3.png" alt="Shio Ramen">
                 <div class="menu_item">
                     <h3>Shio Ramen</h3>
                     <div class="list">
