--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -132,7 +132,7 @@
 <footer>
     <div class="footer-wrapper">
         <div class="footer-logo">
-            <img src="assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png">
+            <img src="assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png" alt="Ramenlogo">
         </div>
         <div class="footer-icons">
             <img src="assets/img/5_section_footer/PNG/tripadvisor_logo.png" alt="tripadvisor">
