add link funktion

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -19,10 +19,10 @@
         <div class="navbar">
             <img class="logo" src="assets/img/1_hero/SVG/sakura_logo.svg" alt="logo">
             <div class="nav">
-                    <a href="#">MENU</a>
-                    <a href="#">LOCATIONS</a>
-                    <a href="#">ABOUT</a>
-                    <a class="button_tel" href="#"><img class="icon_phone" src="assets/img/1_hero/SVG/phone.svg" alt="phone"/>017654564534</a>
+                    <a href="#menu">MENU</a>
+                    <a href="#location">LOCATIONS</a>
+                    <a href="#about">ABOUT</a>
+                    <a class="button_tel" href="tel:017654564534"><img class="icon_phone" src="assets/img/1_hero/SVG/phone.svg" alt="phone"/>017654564534</a>
             </div>
             
         </div>
@@ -46,7 +46,7 @@
             <p class="text_style">Add your <br> toppings</p>
         </div>
     </div>
-    <div class="menu-section">
+    <div class="menu-section" id="menu">
         <h2 class="menu-title">OUR MENU</h2>
         <div class="menu-container">
             <div class="menu">
@@ -118,7 +118,7 @@
         </div>
     </div>
     <div>
-        <h2 class="find-us-title">FIND US AT</h2>
+        <h2 class="find-us-title" id="location">FIND US AT</h2>
         <div class="address">
             <span><img src="assets/img/4_section_find_us_at/PNG/map_marker.png" alt="map_marker">Kapuzinerstraße 31, München, 80337</span>
         </div>
@@ -130,7 +130,7 @@
 </body>
 
 <footer>
-    <div class="footer-wrapper">
+    <div class="footer-wrapper" id="about">
         <div class="footer-logo">
             <img src="assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png" alt="Ramenlogo">
         </div>
