--- a/Rock Band Website/index.html
+++ b/Rock Band Website/index.html
@@ -1,62 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock Mountain</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE-edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Rock Mountain</title>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+  <link href="//db.onlinewebfonts.com/c/517b7177cdced57f3d41b05f9f62287b?family=Viga" rel="stylesheet"
+        type="text/css" />
 </head>
+
 <body>
-  <div class="aot">
-    <header>
-      <img src="img/logo.png" alt="Logo">
-        <nav>
-          <a class="nav-link" href="#">Home</a>
-          <a class="nav-link" href="#">Location</a>
-          <a class="nav-link" href="#">About</a>
-          <a class="nav-link" href="#">Contact</a>
-          <img class="nav-image" src="img/facebook_white.png" alt="Facebook">
-          <img class="nav-image" src="img/instagram_white.png" alt="Instagram">
-          <img class="nav-image" src="img/twitter_white.png" alt="Twitter">
-        </nav>
-    </header>
+<section class="aot">
+  <header>
+    <img src="./img/logo.png" alt="LOGO">
+    <nav>
+      <a class="navLink" href="#">HOME</a>
+      <a class="navLink" href="#">LOCATIONS</a>
+      <a class="navLink" href="#">ABOUT</a>
+      <a class="navLink" href="#">CONTACT</a>
+      <img src="./img/facebook_white.png" alt="" class="navImage">
+      <img src="./img/instagram_white.png" alt="" class="navImage">
+      <img src="./img/twitter_white.png" alt="" class="navImage">
+    </nav>
+  </header>
 
-    <h1>ROCK MOUNTAIN</h1>
-    <div>Discover the best live music</div>
-    <a class="button mt-16" href="#">UPCOMING SHOW</a>
+  <h1>ROCK MOUNTAIN</h1>
+  <div>Discover the best live music</div>
+  <a href="#" class="button mt-16">UPCOMING SHOW</a>
+</section>
+
+<section class="section-quicklinks">
+  <a href="#" class="quickLink">
+    NEWS
+    <img src="./img/category1.png">
+  </a>
+  <a href="#" class="quickLink">
+    ALBUM
+    <img src="./img/category2.png">
+  </a>
+  <a href="#" class="quickLink">
+    STORE
+    <img src="./img/category3.png">
+  </a>
+</section>
+
+<section class="buy-ticket-section">
+  <img class="buy-ticket-img-left" src="./img/p5.png" alt="Live concert">
+  <div class="festival-info">
+    <span>27 Sep 20</span>
+    <h2>31 State Festival</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptate ipsam magnam hic. Dignissimos
+      eius, quia placeat ipsum quibusdam aperiam doloribus quam, cupiditate voluptatibus dolorum consectetur?
+      Amet molestiae vel minima.</p>
   </div>
-
-  <div class="section-quicklinks">
-    <a href="#" class="quicklink">
-      NEWS
-          <img src="img/category1.png" alt="NEWS">
-    </a>
-    <a href="#" class="quicklink">
-      ALBUM
-          <img src="img/category2.png" alt="ALBUM">
-    </a>
-    <a href="#" class="quicklink">
-      STORE
-          <img src="img/category3.png" alt="STORE">
-    </a>
+  <div class="seperator"></div>
+  <div class="buy-ticket-container">
+    <a href="#" class="button">BUY TICKET</a>
   </div>
+</section>
 
-  <div class="buy-ticket-section">
-    <img class="buy-ticket-img-left" src="img/p5.png" alt="Live Concert">
-    <div class="festival-info">
-      <span>27 Sep 20</span>
-      <h2>31 State Festival</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptate ipsam magnam hic. Dignissimos eius, quia placeat ipsum quibusdam aperiam doloribus quam, cupiditate voluptatibus dolorum
-        consectetur? Amet molestiae vel minima.</p>
+<section class="slogan-section">
+  FOLLOW AND LISTEN TO THIS PLAYLIST TO GET PREPARED FOR THE SHOW!
+</section>
+
+<section class="video-section"></section>
+
+<footer>
+  <div class="half-width footer-left">SUBSCRIBE & FOLLOW TO GET UPDATES FROM ROCK MOUNTAIN</div>
+  <div class="half-width">
+    <div class="footer-center">
+      <img class="footer-social-media-icon" src="./img/Facebook.png" alt="Facebook">
+      <img class="footer-social-media-icon" src="./img/ins.png" alt="Instagram">
+      <img class="footer-social-media-icon" src="./img/twitter.png" alt="Twitter">
     </div>
-    <div class="seperator"></div>
-    <div class="buy-ticket-container">
-      <a href="#" class="button">BUY TICKET</a>
-    </div>
+    <form class="footer-form">
+      <input required type="text" placeholder="Email address">
+      <button class="button button-footer">SUBMIT</button>
+    </form>
   </div>
+</footer>
 </body>
 </html>
