Make Responsive for All Devices

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -22,14 +22,14 @@
                     <a href="#menu">MENU</a>
                     <a href="#location">LOCATIONS</a>
                     <a href="#about">ABOUT</a>
-                    <a class="button_tel" href="tel:017654564534"><img class="icon_phone" src="assets/img/1_hero/SVG/phone.svg" alt="phone"/>017654564534</a>
+                    <a class="button_tel" href="tel:017654564534"><img class="icon_phone" src="assets/img/1_hero/SVG/phone.svg" alt="phone"/>+49 176 5456 4534</a>
             </div>
             
         </div>
-            <h1 class="hero-title">SAKURA RAMEN</h1> <span class="subtitle">THE BEST RAMEN IN TOWN</span>
+            <h1 class="hero-title smartphone">SAKURA RAMEN</h1> <span class="subtitle smartphone">THE BEST RAMEN IN TOWN</span>
     </div>
 
-    <div>
+    <div class="sm-title-order">
         <h2 class="how_to_order">HOW TO ORDER</h2>
     </div>
     <div class="order-options-container">
