make site compatible to (Ipad Mini), (Iphone 6,7,8)

--- a/Sakura Ramen Webseite/index.html
+++ b/Sakura Ramen Webseite/index.html
@@ -26,7 +26,7 @@
             </div>
             
         </div>
-            <h1 class="hero-title smartphone">SAKURA RAMEN</h1> <span class="subtitle smartphone">THE BEST RAMEN IN TOWN</span>
+            <h1 class="hero-title">SAKURA RAMEN</h1> <span class="subtitle">THE BEST RAMEN IN TOWN</span>
     </div>
 
     <div class="sm-title-order">
@@ -131,8 +131,9 @@
 
 <footer>
     <div class="footer-wrapper" id="about">
-        <div class="footer-logo">
-            <img src="assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png" alt="Ramenlogo">
+        <div>
+            <img class="footer-logo-desktop" src="assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png" alt="Ramenlogo">
+            <img class="footer-logo-mobile" src="assets/img/1_hero/PNG/sakura_logo.png" alt="logo">
         </div>
         <div class="footer-icons">
             <img src="assets/img/5_section_footer/PNG/tripadvisor_logo.png" alt="tripadvisor">
