--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,18 @@
     <link rel="stylesheet" href="kontakt.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Viga&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Viga&display=swap"
+        rel="stylesheet">
 </head>
+
 <body class="my-body">
     <nav class="header">
         <div class="main-head">
-            
-                <div class="logo-head" style="width: 260px; height: 78px; background-image: url('./img/logo.png'); background-size: cover; background-position: center;"></div>
+
+            <div class="logo-head"
+                style="width: 260px; height: 78px; background-image: url('./img/logo.png'); background-size: cover; background-position: center;">
+            </div>
 
             <div class="nav-links">
                 <a href="./index.html">Start</a>
@@ -27,6 +33,23 @@
             </div>
         </div>
     </nav>
-    
+
+    <div class="recipe-section">
+        <div class="recipe-image"
+            style="width: 642px; height: 428px; background-image: url('./img/croissant.jpg'); background-size: cover; background-position: center; border-radius: 10px 0 0 10px;">
+        </div>
+        <div class="recipe-content">
+
+            <h1 class="recipe-title">TEST ÜBERSCHRIFT</h1>
+            <p class="recipe-description">TEXT </p>
+            <a href="rezept_des_tages.html" class="recipe-button">Rezept öffnen</a>
+
+
+        </div>
+
+    </div>
+
+
 </body>
+
 </html>
