--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -17,12 +17,13 @@
         rel="stylesheet">
 </head>
 
-<body class="my-body">
+<body>
+<div class="my-body">    
     <nav class="header">
         <div class="main-head">
 
             <div class="logo-head"
-                style="width: 260px; height: 78px; background-image: url('./img/logo.png'); background-size: cover; background-position: center;">
+                style="width: 225px; height: 75px; background-image: url('./img/logo.png'); background-size: cover; background-position: center;">
             </div>
 
             <div class="nav-links">
@@ -35,21 +36,65 @@
     </nav>
 
     <div class="recipe-section">
-        <div class="recipe-image"
-            style="width: 642px; height: 428px; background-image: url('./img/croissant.jpg'); background-size: cover; background-position: center; border-radius: 10px 0 0 10px;">
-        </div>
+            <img src="./img/croissant.jpg">
         <div class="recipe-content">
 
             <h1 class="recipe-title">TEST ÜBERSCHRIFT</h1>
             <p class="recipe-description">TEXT </p>
             <a href="rezept_des_tages.html" class="recipe-button">Rezept öffnen</a>
-
-
         </div>
 
     </div>
 
+    <div class="section3">
 
+        <h2>Lust auf was Neues</h2>
+
+        <div class="menu-section">
+            <div class="menu">
+                <img src="./img/croissant.jpg">
+                <p class="menu-text">Platzhalter</p>
+            </div>
+            <div class="menu">
+                <img src="./img/croissant.jpg">
+                <p class="menu-text">Platzhalter</p>
+            </div>
+            <div class="menu">
+                <img src="./img/croissant.jpg">
+                <p class="menu-text">Platzhalter</p>
+            </div>
+            <div class="menu">    
+                <img src="./img/croissant.jpg">
+                <p class="menu-text">Platzhalter</p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<footer>
+    <img class="footerlogo" src="img/logo.png">
+    <div class="footerlinks">
+        <a href="kontakt.css">Kontakt</a>
+        <a href="impressum.css">Impressum</a>
+    </div>
+    <div class="footersocials">
+        <div class="navfooter">
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="./img/social_icons/Instagram.png">
+            </a>
+            <a href="https://de-de.facebook.com/"  target="_blank">
+                <img src="./img/social_icons/facebook_logo.png">
+            </a>
+            <a href="https://x.com/"  target="_blank">
+                <img  src="./img/social_icons/Twitter_Icon.png" >
+            </a>
+        </div>
+    </div>
+</footer>
 </body>
+
+
+
 
 </html>
