--- a/Kochwelt/index.html
+++ b/Kochwelt/index.html
@@ -73,21 +73,21 @@
 </div>
 
 <footer>
-    <img class="footerlogo" src="img/logo.png">
+    <img class="footerlogo" src="img/logo-white.png">
     <div class="footerlinks">
-        <a href="kontakt.css">Kontakt</a>
-        <a href="impressum.css">Impressum</a>
+        <a class= "footer_buttons" href="kontakt.css">Kontakt</a>
+        <a class= "footer_buttons" href="impressum.css">Impressum</a>
     </div>
     <div class="footersocials">
         <div class="navfooter">
             <a href="https://www.instagram.com/" target="_blank">
-                <img src="./img/social_icons/Instagram.png">
+                <img class="sociallogo" src="./img/social_icons/Instagram.png">
             </a>
             <a href="https://de-de.facebook.com/"  target="_blank">
-                <img src="./img/social_icons/facebook_logo.png">
+                <img class="sociallogo"  src="./img/social_icons/facebook_logo.png">
             </a>
             <a href="https://x.com/"  target="_blank">
-                <img  src="./img/social_icons/Twitter_Icon.png" >
+                <img class="sociallogo"  src="./img/social_icons/Twitter_Icon.png" >
             </a>
         </div>
     </div>
